# exitfailure

./: .clog.toml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: rust.yml
examples/: context.rs  display.rs  example.rs
src/: lib.rs
tests/: test.rs
