[package]
name = "exitfailure"
version = "0.5.0"
authors = ["Toby Smith <toby@tismith.id.au>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tismith/exitfailure"
description = "A basic newtype wrappers for use with ? in main"
categories = ["command-line-interface"]
keywords = ["newtype", "failure", "error", "command-line", "cli"]

[dependencies]
failure = "0.1.1"

[dev-dependencies]
assert_cmd = "0.6.0"
predicates = "0.9.0"

[badges]
travis-ci = { repository = "tismith/exitfailure", branch = "master" }
appveyor = { repository = "tismith/exitfailure", branch = "master", service = "github" }
codecov = { repository = "tismith/exitfailure", branch = "master", service = "github" }
